--- a/index.html
+++ b/index.html
@@ -43,19 +43,19 @@
                 <!--h2 скроется в css-->
                 <h2 class="visually-hidden"> Наши преимущества</h2>
                 <ul class="advantages-list">
-                    <li class="item">
+                    <li class="advantages-item">
                         <h3 class="advantages-title">Внимание к деталям</h3>
                         <p class="advantages-text">Идейные соображения, а также начало повседневной работы по формированию позиции.</p>
                     </li>
-                    <li class="item">
+                    <li class="advantages-item">
                         <h3 class="advantages-title">Пунктуальность</h3>
                         <p class="advantages-text">Задача организации, в особенности же рамки и место обучения кадров влечет за собой.</p>
                     </li>
-                    <li class="item">
+                    <li class="advantages-item">
                         <h3 class="advantages-title">Планирование</h3>
                         <p class="advantages-text">Равным образом консультация с широким активом в значительной степени обуславливает.</p>
                     </li>
-                    <li class="item">
+                    <li class="advantages-item">
                         <h3 class="advantages-title">Современные технологии</h3>
                         <p class="advantages-text">Значимость этих проблем настолько очевидна, что реализация плановых заданий.</p>
                     </li>
@@ -68,9 +68,9 @@
             <div class="container">
                 <h2 class="work-title">Чем мы занимаемся</h2>
                 <ul class="work-list">
-                    <li><img src="./img/box1.jpg" alt="сайт" width="370"></li>
-                    <li><img src="./img/box2.jpg" alt="приложения" width="370"></li>
-                    <li><img src="./img/box3.jpg" alt="дизайн" width="370"></li>
+                    <li class="work-item"><img src="./img/box1.jpg" alt="сайт" width="370"></li>
+                    <li class="work-item"><img src="./img/box2.jpg" alt="приложения" width="370"></li>
+                    <li class="work-item"><img src="./img/box3.jpg" alt="дизайн" width="370"></li>
                 </ul> 
             </div>
         </section>
@@ -82,23 +82,31 @@
                 <ul class="staff-list">
                     <li class="staff-item"> 
                         <img src="./img/img.jpg" alt="фото сотрудника" width="270">
-                        <h3 class="name">Игорь Демьяненко</h3>
-                        <p class="profession">Product Designer</p>
+                        <div class="staff-content">
+                            <h3 class="name">Игорь Демьяненко</h3>
+                            <p class="profession">Product Designer</p>
+                        </div>
                     </li>
                     <li class="staff-item">
                         <img src="./img/img1.jpg" alt="фото сотрудника" width="270">
-                        <h3 class="name">Ольга Репина</h3>
-                        <p class="profession">Frontend Developer</p>
+                        <div class="staff-content">
+                            <h3 class="name">Ольга Репина</h3>
+                            <p class="profession">Frontend Developer</p>
+                        </div>
                     </li>
                     <li class="staff-item">
                         <img src="./img/img2.jpg" alt="фото сотрудника" width="270">
-                        <h3 class="name">Николай Тарасов</h3>
-                        <p class="profession">Marketing</p>
+                        <div class="staff-content">
+                            <h3 class="name">Николай Тарасов</h3>
+                            <p class="profession">Marketing</p>
+                        </div>
                     </li>
                     <li class="staff-item">
                         <img src="./img/img3.jpg" alt="фото сотрудника" width="270">
-                        <h3 class="name">Михаил Ермаков</h3>
-                        <p class="profession">UI Designer</p>
+                        <div class="staff-content">
+                            <h3 class="name">Михаил Ермаков</h3>
+                            <p class="profession">UI Designer</p>
+                        </div>
                     </li>
                 </ul>
             </div>
